# infographix

./: .gitignore  README.md  agents.md  pyproject.toml
app/: config.py  db.py  main.py
app/data/: __init__.py  test_prompts.py
app/models/: chat.py  presets.py  specs.py
app/routers/: api.py  ui.py
app/services/: chat_attachments.py  chat_store.py  gemini_client.py  history_store.py  markdown_renderer.py  model_capabilities.py  planner.py  prompt_composer.py  prompt_fragments.py  reference_images.py  revision.py  text_budget.py  text_client.py  text_overlay.py
app/static/css/: styles.css
app/static/js/: htmx_helpers.js
app/templates/: base.html  chat.html  detail.html  history.html  index.html  spec_preview.html
presets/infographics/: comparison_chart.yaml  concept_diagram.yaml  educational_diagram.yaml  explainer_graphic.yaml  line_art_infographic.yaml  mind_map.yaml  process_flow.yaml  roadmap.yaml  scientific_illustration.yaml  statistical_infographic.yaml  vertical_timeline.yaml  whiteboard_explainer.yaml
presets/section_templates/: comparison_dual_column.yaml  process_three_step.yaml  timeline_four_milestone.yaml
presets/styles/: cartoon_3d.yaml  childrens_book.yaml  claymation.yaml  comic_book.yaml  cyberpunk_neon.yaml  flat_vector.yaml  hand_drawn_line_art.yaml  oil_painting.yaml  pixel_art_16bit.yaml  precision_process_cards.yaml  watercolor.yaml
tests/: conftest.py  test_api_routes.py  test_chat_store.py  test_chat_utils.py  test_model_capabilities.py  test_planner.py  test_preset_loading.py  test_prompt_composer.py  test_text_budget.py
